Fix wrongly enabled nav links on mobile

--- a/styles/app.css
+++ b/styles/app.css
@@ -195,10 +195,7 @@ body[data-no-search] nav > search-box {
 body[data-section-actuelle~="mes-chromatiques"] .nav-link[data-nav-section="mes-chromatiques"],
 body[data-section-actuelle~="pokedex"] .nav-link[data-nav-section="pokedex"],
 body[data-section-actuelle~="chasses-en-cours"] .nav-link[data-nav-section="chasses-en-cours"],
-body[data-section-actuelle~="partage"] .nav-link[data-nav-section="partage"],
-body[data-section-actuelle~="pokedex"] .nav-link[data-nav-section="mes-chromatiques"],
-body[data-section-actuelle~="parametres"] .nav-link[data-nav-section="parametres"],
-body[data-section-actuelle~="a-propos"] .nav-link[data-nav-section="parametres"] {
+body[data-section-actuelle~="partage"] .nav-link[data-nav-section="partage"] {
   color: rgb(var(--on-surface));
   --icon-surface: var(--secondary-container);
   --icon-color: var(--on-secondary-container);
@@ -1543,6 +1540,14 @@ input-slider[name="theme-hue"]::part(slider-thumb) {
 
   nav > a > span {
     text-align: center;
+  }
+
+  body[data-section-actuelle~="pokedex"] .nav-link[data-nav-section="mes-chromatiques"],
+  body[data-section-actuelle~="parametres"] .nav-link[data-nav-section="parametres"],
+  body[data-section-actuelle~="a-propos"] .nav-link[data-nav-section="parametres"] {
+    color: rgb(var(--on-surface));
+    --icon-surface: var(--secondary-container);
+    --icon-color: var(--on-secondary-container);
   }
 
   main {
